--- a/irHub/Pages/SettingsPage.xaml
+++ b/irHub/Pages/SettingsPage.xaml
@@ -8,7 +8,6 @@
     xmlns:classes="clr-namespace:irHub.Classes"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:ico="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <hc:ScrollViewer HorizontalContentAlignment="Left">
@@ -68,6 +67,28 @@
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
                         Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="110" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <hc:TransitioningContentControl Grid.Column="0" TransitionMode="Left2RightWithFade">
+                            <TextBlock
+                                Foreground="White"
+                                Text="Start with Windows:"
+                                VerticalAlignment="Center" />
+                        </hc:TransitioningContentControl>
+                        <hc:TransitioningContentControl Grid.Column="1" TransitionMode="Left2RightWithFade">
+                            <ToggleButton
+                                HorizontalAlignment="Center"
+                                IsChecked="{Binding Source={x:Static classes:Global.Settings}, Path=StartWithWindows, UpdateSourceTrigger=PropertyChanged}"
+                                Style="{StaticResource ToggleButtonSwitch}"
+                                ToolTip="Whether to automatically start the application when Windows starts up. The application will start in the background and be available in the system tray" />
+                        </hc:TransitioningContentControl>
+                    </Grid>
+                    <Grid
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="2">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="100" />
