--- a/irHub/Pages/SettingsPage.xaml
+++ b/irHub/Pages/SettingsPage.xaml
@@ -34,6 +34,7 @@
                         <RowDefinition Height="35" />
                         <RowDefinition Height="35" />
                         <RowDefinition Height="35" />
+                        <RowDefinition Height="35" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -66,7 +67,29 @@
                     <Grid
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Grid.Row="1">
+                        Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="110" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <hc:TransitioningContentControl Grid.Column="0" TransitionMode="Left2RightWithFade">
+                            <TextBlock
+                                Foreground="White"
+                                Text="Global Hotkey:"
+                                VerticalAlignment="Center" />
+                        </hc:TransitioningContentControl>
+                        <hc:TransitioningContentControl Grid.Column="1" TransitionMode="Left2RightWithFade">
+                            <ToggleButton
+                                HorizontalAlignment="Center"
+                                IsChecked="{Binding Source={x:Static classes:Global.Settings}, Path=EnableGlobalHotkey, UpdateSourceTrigger=PropertyChanged}"
+                                Style="{StaticResource ToggleButtonSwitch}"
+                                ToolTip="Enable global hotkey (Ctrl+Shift+I) to recover irHub from tray at any time" />
+                        </hc:TransitioningContentControl>
+                    </Grid>
+                    <Grid
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="3">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="110" />
                             <ColumnDefinition Width="40" />
