--- a/irHub/Pages/SettingsPage.xaml
+++ b/irHub/Pages/SettingsPage.xaml
@@ -67,29 +67,7 @@
                     <Grid
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        Grid.Row="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="110" />
-                            <ColumnDefinition Width="40" />
-                        </Grid.ColumnDefinitions>
-                        <hc:TransitioningContentControl Grid.Column="0" TransitionMode="Left2RightWithFade">
-                            <TextBlock
-                                Foreground="White"
-                                Text="Global Hotkey:"
-                                VerticalAlignment="Center" />
-                        </hc:TransitioningContentControl>
-                        <hc:TransitioningContentControl Grid.Column="1" TransitionMode="Left2RightWithFade">
-                            <ToggleButton
-                                HorizontalAlignment="Center"
-                                IsChecked="{Binding Source={x:Static classes:Global.Settings}, Path=EnableGlobalHotkey, UpdateSourceTrigger=PropertyChanged}"
-                                Style="{StaticResource ToggleButtonSwitch}"
-                                ToolTip="Enable global hotkey (Ctrl+Shift+I) to recover irHub from tray at any time" />
-                        </hc:TransitioningContentControl>
-                    </Grid>
-                    <Grid
-                        Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        Grid.Row="3">
+                        Grid.Row="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="110" />
                             <ColumnDefinition Width="40" />
@@ -112,6 +90,28 @@
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
                         Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="110" />
+                            <ColumnDefinition Width="40" />
+                        </Grid.ColumnDefinitions>
+                        <hc:TransitioningContentControl Grid.Column="0" TransitionMode="Left2RightWithFade">
+                            <TextBlock
+                                Foreground="White"
+                                Text="Recover keybind:"
+                                VerticalAlignment="Center" />
+                        </hc:TransitioningContentControl>
+                        <hc:TransitioningContentControl Grid.Column="1" TransitionMode="Left2RightWithFade">
+                            <ToggleButton
+                                HorizontalAlignment="Center"
+                                IsChecked="{Binding Source={x:Static classes:Global.Settings}, Path=EnableGlobalHotkey, UpdateSourceTrigger=PropertyChanged}"
+                                Style="{StaticResource ToggleButtonSwitch}"
+                                ToolTip="Enable global hotkey (Ctrl+Shift+I) to recover irHub from system tray at any time" />
+                        </hc:TransitioningContentControl>
+                    </Grid>
+                    <Grid
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="3">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="100" />
@@ -129,7 +129,10 @@
                                 Grid.ColumnSpan="2"
                                 HorizontalAlignment="Left"
                                 TransitionMode="Right2LeftWithFade">
-                                <Button Click="ImportPrograms_OnClick" Content="Auto-import" />
+                                <Button 
+                                    Click="ImportPrograms_OnClick" 
+                                    Content="Auto-import"
+                                    ToolTip="Automatically import programs from alternative applications" />
                             </hc:TransitioningContentControl>
                         </Grid>
                     </Grid>
