--- a/irHub/Windows/MainWindow.xaml
+++ b/irHub/Windows/MainWindow.xaml
@@ -30,6 +30,7 @@
                         CommandParameter="https://paypal.me/marijn17s"
                         Header="Buy me a drink 🍹" />
                 </MenuItem>
+                <MenuItem Header="Profiles" Name="ProfilesMenu" />
                 <MenuItem Click="AddProgram_OnClick" Header="New application" />
             </Menu>
         </StackPanel>
