--- a/irHub/Dialogs/ProgramDialog.xaml
+++ b/irHub/Dialogs/ProgramDialog.xaml
@@ -302,8 +302,6 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="20" />
                             <ColumnDefinition Width="165" />
-                            <ColumnDefinition Width="50" />
-                            <ColumnDefinition Width="15" />
                         </Grid.ColumnDefinitions>
                         <hc:TransitioningContentControl Grid.Column="0" TransitionMode="Left2RightWithFade">
                             <CheckBox
@@ -311,30 +309,14 @@
                                 HorizontalAlignment="Center"
                                 IsChecked="{Binding MinimizeToTray}"
                                 Name="MinimizeToTrayCheckbox"
-                                ToolTip="Delay for minimizing the application after it has started"
+                                ToolTip="Wait for window to open and minimize to tray"
                                 Unchecked="MinimizeToTrayCheckbox_OnUnchecked" />
                         </hc:TransitioningContentControl>
                         <hc:TransitioningContentControl Grid.Column="1" TransitionMode="Left2RightWithFade">
                             <TextBlock
                                 Margin="4,0,0,0"
-                                Text="Minimize to tray with delay of"
-                                ToolTip="Delay for minimizing the application after it has started"
-                                VerticalAlignment="Center" />
-                        </hc:TransitioningContentControl>
-                        <hc:TransitioningContentControl Grid.Column="2" TransitionMode="Right2LeftWithFade">
-                            <TextBox
-                                Foreground="White"
-                                Height="20"
-                                HorizontalContentAlignment="Center"
-                                Margin="2"
-                                MaxLength="4"
-                                Text="{Binding MinimizeToTrayDelay, UpdateSourceTrigger=PropertyChanged}"
-                                ToolTip="Delay for minimizing the application after it has started" />
-                        </hc:TransitioningContentControl>
-                        <hc:TransitioningContentControl Grid.Column="3" TransitionMode="Right2LeftWithFade">
-                            <TextBlock
-                                Margin="1,0,0,0"
-                                Text="ms"
+                                Text="Minimize to tray on startup"
+                                ToolTip="Whether or not to minimize the app to the system tray on startup"
                                 VerticalAlignment="Center" />
                         </hc:TransitioningContentControl>
                     </Grid>
@@ -342,8 +324,6 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="20" />
                             <ColumnDefinition Width="165" />
-                            <ColumnDefinition Width="50" />
-                            <ColumnDefinition Width="15" />
                         </Grid.ColumnDefinitions>
                         <hc:TransitioningContentControl Grid.Column="0" TransitionMode="Left2RightWithFade">
                             <CheckBox
@@ -351,30 +331,14 @@
                                 HorizontalAlignment="Center"
                                 IsChecked="{Binding CloseToTray}"
                                 Name="CloseToTrayCheckbox"
-                                ToolTip="Delay for closing the application window after it has started"
+                                ToolTip="Wait for window to open and close to tray"
                                 Unchecked="CloseToTrayCheckbox_OnUnchecked" />
                         </hc:TransitioningContentControl>
                         <hc:TransitioningContentControl Grid.Column="1" TransitionMode="Left2RightWithFade">
                             <TextBlock
                                 Margin="4,0,0,0"
-                                Text="Close to tray with delay of"
-                                ToolTip="Delay for closing the application window after it has started"
-                                VerticalAlignment="Center" />
-                        </hc:TransitioningContentControl>
-                        <hc:TransitioningContentControl Grid.Column="2" TransitionMode="Right2LeftWithFade">
-                            <TextBox
-                                Foreground="White"
-                                Height="20"
-                                HorizontalContentAlignment="Center"
-                                Margin="2"
-                                MaxLength="4"
-                                Text="{Binding CloseToTrayDelay, UpdateSourceTrigger=PropertyChanged}"
-                                ToolTip="Delay for closing the application window after it has started" />
-                        </hc:TransitioningContentControl>
-                        <hc:TransitioningContentControl Grid.Column="3" TransitionMode="Right2LeftWithFade">
-                            <TextBlock
-                                Margin="1,0,0,0"
-                                Text="ms"
+                                Text="Close to tray on startup"
+                                ToolTip="Whether or not to close the app to the system tray on startup"
                                 VerticalAlignment="Center" />
                         </hc:TransitioningContentControl>
                     </Grid>
